Requirements and .env.example files update

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 OPENAI_API_KEY=
-SWELL_AUTHORIZATION_KEY=""
+SWELL_AUTHORIZATION_KEY=
 SWELL_API_URL=
 SERPAPI_API_KEY=
 NEXT_PUBLIC_SHOP_NAME=
-PINECONE_API_KEY=""
-PINECONE_ENV=""
+PINECONE_API_KEY=
+PINECONE_ENV=
