--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ SWELL_AUTHORIZATION_KEY=
 SWELL_API_URL=
 SERPAPI_API_KEY=
 NEXT_PUBLIC_SHOP_NAME=
+
+PINECONE_API_KEY=
+PINECONE_ENV=
+
+API_BASE_ROUTE=
