--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^8.0.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "js-cookie": "^3.0.5",
     "next": "13.4.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -26,6 +27,11 @@
     "react-hook-form": "^7.45.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
-    "typewriter-effect": "^2.20.1"
+    "typewriter-effect": "^2.20.1",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
+    "@types/uuid": "^9.0.2"
   }
 }
